--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jsonix-schema-compiler": "^2.3.9"
   },
   "scripts": {
-    "gen-props": "node installApp.js . ./api ./img",
+    "gen-props": "node installApp.js ./build ./api ./img",
     "copy-scripts": "node copyScripts.js",
     "start": "react-scripts-kotlin start",
     "buildWithApi": "react-scripts-kotlin build && npm run gen-props && npm run copy-scripts",
